--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,13 @@
     bevy                = "0.12.1"
     bevy-inspector-egui = "0.21.0"
     bevy-persistent     = { version = "0.4.0", features = ["json"] }
+bevy_common_assets = { version = "0.8.0", features = ["json"] }
     itertools           = "0.12.0"
     serde               = { version = "1.0.193", features = ["derive"] }
+
+[profile.dev]
+    opt-level = 1
+
+    # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+    [profile.dev.package."*"]
+        opt-level = 2
