--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@
     bevy-persistent     = { version = "0.4.0", features = ["json"] }
 bevy_common_assets = { version = "0.8.0", features = ["json"] }
     itertools           = "0.12.0"
+rand = "0.8.5"
     serde               = { version = "1.0.193", features = ["derive"] }
 
 [profile.dev]
