--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@
 
 [dependencies]
     bevy                = "0.12.1"
+bevy-debug-text-overlay = "7.0.0"
     bevy-inspector-egui = "0.21.0"
     bevy-persistent     = { version = "0.4.0", features = ["json"] }
 bevy_common_assets = { version = "0.8.0", features = ["json"] }
