--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,14 @@
     # bevy-inspector-egui     = "0.21.0"
     bevy-persistent    = { version = "0.4.0", features = ["json"] }
     bevy_common_assets = { version = "0.8.0", features = ["json"] }
-bevy_meshem = "0.3.0"
+    bevy_meshem        = "0.3.0"
     itertools          = "0.12.0"
     rand               = "0.8.5"
     serde              = { version = "1.0.193", features = ["derive"] }
 
-    # [profile.dev]
-    #     opt-level = 1
+[profile.dev]
+    opt-level = 1
 
-    #     # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
-    #     [profile.dev.package."*"]
-    #         opt-level = 2
+    # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+    [profile.dev.package."*"]
+        opt-level = 2
