--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,15 @@
 [dependencies]
     bevy                    = "0.12.1"
     bevy-debug-text-overlay = "7.0.0"
-    bevy-inspector-egui     = "0.21.0"
-    bevy-persistent         = { version = "0.4.0", features = ["json"] }
-    bevy_common_assets      = { version = "0.8.0", features = ["json"] }
-    bevy_egui               = "0.23.0"
-    bevy_meshem             = "0.3.0"
-    itertools               = "0.12.0"
-    rand                    = "0.8.5"
-    serde                   = { version = "1.0.193", features = ["derive"] }
+    # bevy-inspector-egui     = "0.21.0"
+    bevy-persistent    = { version = "0.4.0", features = ["json"] }
+    bevy_common_assets = { version = "0.8.0", features = ["json"] }
+    bevy_egui          = "0.23.0"
+    bevy_meshem        = "0.3.0"
+    itertools          = "0.12.0"
+    rand               = "0.8.5"
+    serde              = { version = "1.0.193", features = ["derive"] }
+uuid = "1.6.1"
 
 [profile.dev]
     opt-level = 1
@@ -24,5 +25,5 @@
     [profile.dev.package."*"]
         opt-level = 2
 
-    [profile.release.package."bevy-inspector-egui"]
-        opt-level = 1
+        # [profile.release.package."bevy-inspector-egui"]
+        #     opt-level = 1
