--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,8 @@
     [profile.dev.package."*"]
         opt-level = 2
 
+    [profile.dev.package."bevy-inspector-egui"]
+        opt-level = 1
+
     [profile.release.package."bevy-inspector-egui"]
         opt-level = 1
