--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@
     itertools               = "0.12.0"
     rand                    = "0.8.5"
     serde                   = { version = "1.0.193", features = ["derive"] }
+strum = { version = "0.25.0", features = ["derive"] }
     uuid                    = "1.6.1"
 
 [features]
