--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,14 @@
     bevy_egui               = { version = "0.23.0", optional = true }
     bevy_meshem             = "0.3.0"
     itertools               = "0.12.0"
-once_cell = "1.18.0"
+    once_cell               = "1.18.0"
     rand                    = "0.8.5"
     serde                   = { version = "1.0.193", features = ["derive"] }
-strum = { version = "0.25.0", features = ["derive"] }
+    strum                   = { version = "0.25.0", features = ["derive"] }
     uuid                    = "1.6.1"
 
 [features]
-    default = []
+    default = ["dbg"]
     dbg     = ["bevy-inspector-egui", "bevy_egui"]
 
 [profile.dev]
