--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
     "__RUSTFLAGS": "-C link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld -Zshare-generics=y",
     "RUSTFLAGS": "-C link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"
   },
-  "rust-analyzer.cargo.features": [],
+  "rust-analyzer.cargo.features": ["dbg"],
   "rust-analyzer.showUnlinkedFileNotification": false
 }
