--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@
     bevy_common_assets      = { version = "0.8.0", features = ["json"] }
     bevy_egui               = { version = "0.23.0", optional = true }
     bevy_meshem             = "0.3.0"
+bevy_mod_raycast = "0.16.0"
     itertools               = "0.12.0"
     once_cell               = "1.18.0"
     rand                    = "0.8.5"
