--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,19 +13,21 @@
     bevy_common_assets      = { version = "0.8.0", features = ["json"] }
     bevy_egui               = { version = "0.23.0", optional = true }
     bevy_meshem             = "0.3.0"
-bevy_mod_raycast = "0.16.0"
+    bevy_mod_raycast        = "0.16.0"
     itertools               = "0.12.0"
     once_cell               = "1.18.0"
     rand                    = "0.8.5"
     serde                   = { version = "1.0.193", features = ["derive"] }
     strum                   = { version = "0.25.0", features = ["derive"] }
     uuid                    = "1.6.1"
+    bevy_mod_debugdump      = { version = "0.9.0", optional = true }
 
 [features]
     default = [
         # "dbg"
     ]
     dbg = ["bevy-inspector-egui", "bevy_egui"]
+    graph = ["bevy_mod_debugdump"]
 
 [profile.dev]
     opt-level = 1
