--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,11 +4,8 @@
 # If you are using rust stable, remove the "-Zshare-generics=y" below.
 
 [target.x86_64-unknown-linux-gnu]
-    linker = "clang"
-    rustflags = [
-        "-Clink-arg=-fuse-ld=lld",
-        # "-Zshare-generics=y"
-    ]
+    linker    = "clang"
+    rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]
 
 # NOTE: you must install [Mach-O LLD Port](https://lld.llvm.org/MachO/index.html) on mac. you can easily do this by installing llvm which includes lld with the "brew" package manager:
 # `brew install llvm`
@@ -16,19 +13,20 @@
     rustflags = [
         "-C",
         "link-arg=-fuse-ld=/usr/local/opt/llvm/bin/ld64.lld",
-        # "-Zshare-generics=y",
+        "-Zshare-generics=y",
     ]
 
 [target.aarch64-apple-darwin]
     rustflags = [
         "-C",
         "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld",
-        # "-Zshare-generics=y",
+        "-Zshare-generics=y",
     ]
 
 [target.x86_64-pc-windows-msvc]
-    linker = "rust-lld.exe"
-    # rustflags = ["-Zshare-generics=n"]
+    linker    = "rust-lld.exe"
+    rustflags = ["-Zshare-generics=n"]
+
 
 # Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
 # In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
@@ -37,4 +35,5 @@
     # 
 
 [target.wasm32-unknown-unknown]
-    runner = "wasm-server-runner"
+    runner    = "wasm-server-runner"
+    rustflags = ["-Zshare-generics=y"]
