--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,8 @@
     [profile.dev.package."*"]
         opt-level = 2
 
-    [profile.dev.package."bevy-inspector-egui"]
-        opt-level = 1
+        # [profile.dev.package."bevy-inspector-egui"]
+        #     opt-level = 1
 
 [profile.release]
     lto           = true
@@ -45,5 +45,5 @@
     opt-level     = 'z'
 
 
-    [profile.release.package."bevy-inspector-egui"]
-        opt-level = 1
+    # [profile.release.package."bevy-inspector-egui"]
+    #     opt-level = 1
