--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "rust-analyzer.cargo.extraEnv": {
-    "__RUSTFLAGS": "-C link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld -Zshare-generics=y",
-    "RUSTFLAGS": "-C link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"
+    "RUSTFLAGS": "-C link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld -Zshare-generics=y",
+    "__RUSTFLAGS": "-C link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"
   },
   "rust-analyzer.cargo.features": ["dbg"],
   "rust-analyzer.showUnlinkedFileNotification": false
